# localized_control_rc_car

./: .gitignore  CMakeCache.txt  README.md
.github/workflows/: embedded.yml  hosted.yml  lib.yml
OpenCV_C++/: CMakeCache.txt  DetectGreenCircle.cpp  LAB4.cpp  Lab4  Makefile  OpenCV_c++.sln  cmake_install.cmake
OpenCV_C++/OpenCV_c++/: CMakeLists.txt  Lab4.cpp  OpenCV_c++.vcxproj
ci/: needs_checking.bash
computer_vision_draft/: Edge_Detection.m  SIFT_feature_matching.m  cameraCapture.m  color_spaces.m  featureMethod.m  feature_matching.asv  feature_matching.m  hough_line_corridor_detection.cpp  monocula_path_detection.asv  monocular_path_detection.m  untitled.m
computer_vision_draft/Combined/: Combined.sln
computer_vision_draft/Combined/Combined/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.save  Camera_Preprocessor.cpp  Camera_Preprocessor.h  Combined.aps  Combined.vcxproj  Combined.vcxproj.filters  Combined1.aps  DrivabilityDetector.cpp  DrivabilityDetector.h  Makefile  OpenCV  StartStop.cpp  StartStop.h  TCP.cpp  TCP.h  TCP.h.save  cmake_install.cmake  cmake_install.cmake.bak  main.cpp  main.cpp.save  resource.h  start_main_cpp.sh
computer_vision_draft/calibration/: calibrationSession.mat
computer_vision_draft/houghTransform/: houghTransform.sln
computer_vision_draft/houghTransform/houghTransform/: DrivabilityDetector.cpp  DrivabilityDetector.h  README.txt  houghTransform.rc  houghTransform.vcxproj  houghTransform.vcxproj.filters  main.cpp
computer_vision_draft/houghTransform/houghTransform/x64/Release/: houghTransform.exe.recipe  houghTransform.iobj  houghTransform.ipdb
computer_vision_draft/houghTransform/houghTransform/x64/Release/houghTransform.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  houghTransform.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
cv_tooling/: README.md  cameraParams.mat
docs/: issue_template.md  pr_template.md  tooling.md  wokflow.md
embedded_rtic/: '  .gitignore  :w  Cargo.toml  README.md  build.rs  custom_link.x  ex1.syms  log  memory.x  rustfmt.toml
embedded_rtic/.cargo/: config.toml
embedded_rtic/examples/: dma_spi.rs  dma_spi_embassy.rs  dma_spi_protocol.rs  esc.rs  keep_me_centered.rs  pre_race.rs  pwm.rs  servo.rs  servo_tune.rs  sonar.rs  sonars.rs  speed.rs  speed_measurement.rs  speed_measurement_controlled.rs  spim_hal_example.rs
embedded_rtic/src/: car.rs  controller  controller.rs  esc.rs  helpers.rs  lib.rs  servo.rs  wrapper.rs
embedded_rtic/src/car/: event.rs  pin_map.rs
hosted/: '  Cargo.toml  README.md  log
hosted/examples/: cv.rs  graphing.rs  rockpi_spi.rs  tcp_graphing.rs  tcp_monitor.rs  tcp_spi.rs
hosted/src/: lib.rs  main.rs  spi.rs  tcp_monitor.rs  tui.rs
hosted/src/cv/: buffer.rs  camera_monitor.rs  color_code.rs  graphical.rs  kernel.rs  mod.rs  rgb_stream.rs  transform.rs
hosted/src/tui/: graph.rs  input_box.rs
shared/: Cargo.toml
shared/src/: controller.rs  gain_scheduling.rs  lib.rs  protocol.rs
shared/src/protocol/: v0_0_1.rs  v0_0_2.rs
v4l/: Cargo.toml  log
v4l/src/: buffer.rs  color_code.rs  graphical.rs  kernel.rs  lib.rs  main.rs  rgb_stream.rs  transform.rs
