[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
arraydeque = { version = "0.5.1", default-features = false }
rtic-sync = "1.3.0"
rtic = { version = "2.0.0", features = [ "thumbv7-backend" ] }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }

[features]
std = []
no_std = []
default = ["std"]
